# irdma

./: Makefile  RDMA_RC_example.c  active_bind.c  apm.c  build_vf.sh  check.py  crc32c.h  crc32c_simple_perf.c  device.h  hop_limit.c  ib2netdev  main.cpp  mc.c  mckey.c  mlx5dv_port_affinity.py  mlx_send_nosge.c  multicast_key.c  nccl_allreduce.c  port_affinity.c  pyverbs_port_affinity.py  qp2err.c  raw_ethernet_send.c  raw_qp_crc32c.c  raw_qp_crc32c_ck.c  rdma_connect.c  rdma_rc.c  rdma_read_crc32c_reqck.c  rdmacm_scale.c  single_port_affinity.py  single_vm_port_affinity.py  socket_fd.c  sq_drained_beacon.c  srq.c  x722_mcx4.cpp
cd_reduce/: cross_channel.c
crc32c/: CMakeLists.txt  bench_ceph_crc32c.cpp  bench_lo_rdma_read.cpp  bench_lo_rdma_read_crc32c.cpp  bench_lo_rdma_write_crc32c.cpp  bench_remote_rdma_read.cpp  bench_remote_rdma_read_crc32c.cpp  bench_sw_crc32c.cpp  check_rdma_crc32c.c  check_rdma_write_crc32c.c  crc32c_simple_perf.c  dma_crc32c.c  raw_qp_crc32c_ck.c  rdma_read_crc32c.c  read_write_crc32c_perf.c  remote_rdma_read_crc32c.cpp
cuda/: matrixAdd.cu  nccl_allgather.c  vectorAdd.cu
devx/: devx_create_qp.c  mlx5dv_create_qp.c
doca/: README.md
doca/doca_common/: VERSION  common.c  common.h
doca/doca_common/pe_polling/: meson.build
doca/doca_devemu/: VERSION  build_dpacc_samples.sh
doca/doca_devemu/devemu_pci_device_db/dpu/: meson.build
doca/doca_devemu/devemu_pci_device_dma/dpu/: devemu_pci_device_dma_dpu_main.c
doca/doca_devemu/devemu_pci_device_hotplug/: meson.build
doca/doca_devemu/devemu_pci_device_msix/dpu/: meson.build
doca/doca_dma/dpu_local_copy/: VERSION  meson.build
dpa/flexio/: meson.build  meson_options.txt
dpa/flexio/include/: meson.build
dpa/flexio/virtio_dpa_riscv/: meson.build  virtio_dpa.c
dpa/flexio/virtio_dpu_arm/: meson.build  virtio_dpu.c
dpa/lib_test/: Makefile  meson.build  unit_test.c
dpa/lib_test/com/: dpa_add.h  dpa_error_handler.h  dpa_sub.h  flexio_api_ver.h  flexio_api_wrapper.h
dpa/lib_test/dev/: dpa_add.c  dpa_error_handler.c  dpa_sub.c  meson.build
dpa/lib_test/host/: meson.build  offload_ctx.c  offload_dev.c  offload_sub_add.c  priv_offload_ctx.h
dpa/lib_test/inc/: offload_ctx.h  offload_dev.h  offload_sub_add.h
dpa/lib_test/tools/: build_dpa.sh
frame/: bad_icrc.py
gga/: en_rd_connect_mma.c  gga_dma_mma.c  gga_mma.c  mma_api_perf.c  mma_func_ver.c  mma_writeback_perf.c  rd_connect_mma.c  read_remote_inv_cache.c  wr_connect_mma.c
ha/: ha.c
